--- a/pom.xml
+++ b/pom.xml
@@ -15,20 +15,98 @@
     limitations under the License.
  -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
     <parent>
         <groupId>org.onap.oparent</groupId>
         <artifactId>oparent</artifactId>
         <version>2.0.0</version>
+        <relativePath />
     </parent>
 
-    <modelVersion>4.0.0</modelVersion>
     <groupId>org.onap.usecase-ui.server</groupId>
     <artifactId>usecase-ui-server-parent</artifactId>
     <version>2.0.0</version>
     <packaging>pom</packaging>
     <name>usecase-ui-server</name>
     <description>project for usecase-ui server</description>
+
+    <properties>
+        <sonar.projectVersion>${project.version}</sonar.projectVersion>
+        <maven.build.timestamp.format>yyyyMMdd'T'HHmm</maven.build.timestamp.format>
+        <nexusproxy>https://nexus.onap.org</nexusproxy>
+        <releaseNexusPath>content/repositories/releases/</releaseNexusPath>
+        <snapshotNexusPath>content/repositories/snapshots/</snapshotNexusPath>
+        <publicNexusPath>content/repositories/public/</publicNexusPath>
+        <siteNexusPath>content/sites/site/${project.groupId}/${project.artifactId}/${project.version}/</siteNexusPath>
+    </properties>
+
+    <distributionManagement>
+        <repository>
+            <id>onap-releases</id>
+            <url>${nexusproxy}/${releaseNexusPath}</url>
+        </repository>
+        <snapshotRepository>
+            <id>onap-snapshots</id>
+            <url>${nexusproxy}/${snapshotNexusPath}</url>
+        </snapshotRepository>
+        <site>
+            <id>onap-site</id>
+            <url>dav:${nexusproxy}${siteNexusPath}</url>
+        </site>
+    </distributionManagement>
+
+    <!-- Specify the repositories here to avoid coordination of ~/.m2/settings.xml 
+        files among developers. Use values (not properties) so oparent can be resolved. -->
+    <repositories>
+        <repository>
+            <id>onap-public</id>
+            <url>${nexusproxy}/${publicNexusPath}</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>onap-releases</id>
+            <url>${nexusproxy}/${releaseNexusPath}</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>onap-snapshots</id>
+            <url>${nexusproxy}/${snapshotNexusPath}</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+        </repository>
+    </repositories>
+
+    <!-- Specify the repositories here to avoid coordination of ~/.m2/settings.xml 
+        files among all developers. -->
+    <pluginRepositories>
+        <pluginRepository>
+            <id>onap-plugin-public</id>
+            <url>${nexusproxy}/${publicNexusPath}</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </pluginRepository>
+        <pluginRepository>
+            <id>onap-plugin-release</id>
+            <url>${nexusproxy}/${releaseNexusPath}</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </pluginRepository>
+        <pluginRepository>
+            <id>onap-plugin-snapshots</id>
+            <url>${nexusproxy}/${snapshotNexusPath}</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+        </pluginRepository>
+    </pluginRepositories>
 
     <modules>
         <module>server</module>
