--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 
     <groupId>org.onap.usecase-ui.server</groupId>
     <artifactId>usecase-ui-server-parent</artifactId>
-    <version>2.0.0</version>
+    <version>2.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>usecase-ui-server</name>
     <description>project for usecase-ui server</description>
@@ -112,7 +112,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-deploy-plugin</artifactId>
-                <!-- version managed by oparent <version>2.8</version> -->
+                <version>2.8</version>
                 <configuration>
                     <skip>true</skip>
                 </configuration>
