--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 
     <groupId>org.onap.usecase-ui.server</groupId>
     <artifactId>usecase-ui-server-parent</artifactId>
-    <version>2.0.0</version>
+    <version>2.0.1</version>
     <packaging>pom</packaging>
     <name>usecase-ui-server</name>
     <description>project for usecase-ui server</description>
@@ -99,7 +99,7 @@
     </modules>
 
     <build>
-        <!--pluginManagement>
+        <pluginManagement>
             <plugins>
                 <plugin>
                     <groupId>org.sonatype.plugins</groupId>
@@ -113,7 +113,7 @@
                     </configuration>
                 </plugin>
             </plugins>
-        </pluginManagement-->
+        </pluginManagement>
         <plugins>
             <plugin>
                 <groupId>org.sonatype.plugins</groupId>
