--- a/pom.xml
+++ b/pom.xml
@@ -166,7 +166,7 @@
                 <artifactId>maven-deploy-plugin</artifactId>
                 <version>2.8</version>
                 <configuration>
-                    <skip />
+                    <skip>true</skip>
                 </configuration>
             </plugin>
         </plugins>
